// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tag > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly colored 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_primary__1gaaepyc styles_isButton_false__1gaaepyh"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e style__1do42ls3e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_disabled_true__1gaaepy7 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_9__1gaaepyr"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_disabled_true__1do42ls1 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_28__1do42ls22 style__1do42ls3e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with code variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with copiable and copy button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1y5sygv5"
    >
      <div
        class="styles_copiable__1gaaepy0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
      >
        <button
          class="styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
        >
          <span
            class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            test
          </span>
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkze uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 1a3.5 3.5 0 0 0-3.5 3.5V7A1.5 1.5 0 0 0 3 8.5v5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5v-5A1.5 1.5 0 0 0 11.5 7V4.5A3.5 3.5 0 0 0 8 1m2 6V4.5a2 2 0 1 0-4 0V7z"
              fill-rule="evenodd"
            />
          </svg>
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with isLoading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
        >
          test
        </span>
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="styles__1ehxqey2"
          role="progressbar"
          style="height: 1rem; width: 1rem;"
          viewBox="0 0 100 100"
        >
          <circle
            class="styles__1ehxqey1"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke-width="16"
          />
          <circle
            class="styles__1ehxqey3"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#8c40ef"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with key-value variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
      >
        <div
          class="styles__1gaaepy13 styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe1: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe2: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe3: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe4: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe5: minmax(0, auto) 1px minmax(0, auto);"
        >
          <span
            class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            key
          </span>
          <hr
            aria-orientation="vertical"
            class="styles__1gaaepy2 styles__bu43fbb styles_direction_vertical__bu43fbd styles_sentiment_neutral__bu43fbi"
            style="--bu43fb0: 1px;"
          />
          <span
            class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            value
          </span>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
        >
          test
        </span>
      </span>
      <button
        aria-label="Close tag"
        class="styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_16__1gaaepyy"
        data-testid="close-tag"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with onClose and key-value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8"
      >
        <div
          class="styles__1gaaepy13 styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe1: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe2: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe3: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe4: minmax(0, auto) 1px minmax(0, auto); --_3mg8xe5: minmax(0, auto) 1px minmax(0, auto);"
        >
          <span
            class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            myKey
          </span>
          <hr
            aria-orientation="vertical"
            class="styles__1gaaepy2 styles__bu43fbb styles_direction_vertical__bu43fbd styles_sentiment_neutral__bu43fbi"
            style="--bu43fb0: 1px;"
          />
          <span
            class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            myValue
          </span>
        </div>
      </span>
      <button
        aria-label="Close tag"
        class="styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_16__1gaaepyy"
        data-testid="close-tag"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > should not close with onClose and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__1gaaepy1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <span
        class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_disabled_true__1gaaepy7 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8 styles_undefined_compound_9__1gaaepyr"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_disabled_true__1do42ls1 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_28__1do42ls22 style__1do42ls3e"
        >
          test
        </span>
      </span>
      <button
        aria-label="Close tag"
        class="styles__1gaaepy5 styles_disabled_true__1gaaepy7 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_9__1gaaepyr"
        data-testid="close-tag"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > should not copy with copiable and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_copiable__1gaaepy0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
    >
      <button
        class="styles_copiable__1gaaepy3 styles__1gaaepy5 styles_disabled_true__1gaaepy7 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_9__1gaaepyr"
      >
        <span
          class="styles__1gaaepy13 style__1do42ls0 style_disabled_true__1do42ls1 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_28__1do42ls22 style__1do42ls3e"
        >
          test
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
